; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/avr32/boards/merisc/extr_setup.c_merisc_revision.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/avr32/boards/merisc/extr_setup.c_merisc_revision.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@merisc_board_id = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"B\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"D\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"A\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"Unknown\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @merisc_revision() #0 {
  %1 = alloca i8*, align 8
  %2 = load i32, i32* @merisc_board_id, align 4
  switch i32 %2, label %6 [
    i32 0, label %3
    i32 1, label %4
    i32 2, label %5
  ]

3:                                                ; preds = %0
  store i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  br label %7

4:                                                ; preds = %0
  store i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i8** %1, align 8
  br label %7

5:                                                ; preds = %0
  store i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i8** %1, align 8
  br label %7

6:                                                ; preds = %0
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0), i8** %1, align 8
  br label %7

7:                                                ; preds = %6, %5, %4, %3
  %8 = load i8*, i8** %1, align 8
  ret i8* %8
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
